# simple-ffmpeg-tutorial

./: .gitignore  CMakeLists.txt  README.md  main.c
